scrollbar and tooltip issue fixed

--- a/src/app/components/core/configuration-manager/list-table/list-table.component.css
+++ b/src/app/components/core/configuration-manager/list-table/list-table.component.css
@@ -21,7 +21,7 @@ tr:hover .delete-icon {
 .custom-viewport {
   max-width: 65vw;
   max-height: 45vh;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .table-wrapper {
@@ -43,4 +43,8 @@ tr:hover .delete-icon {
 
 .input {
   min-width: 120px;
+}
+
+.scrollable {
+  overflow: auto !important;
 }
